--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -30,4 +30,7 @@
     </ion-label>
     <ion-button type="submit" color="primary">Entrar</ion-button>
   </form>
+  <br>
+  <ion-label position="floating">¿No tienes una cuenta?</ion-label>
+  <ion-button color="secondary" routerLink="/register">Regístrate</ion-button>
 </ion-content>
