--- a/src/app/userlist/userlist.page.html
+++ b/src/app/userlist/userlist.page.html
@@ -1,7 +1,7 @@
 <ion-header>
-  <ion-toolbar color="secondary">
-    <ion-title>Administración - Lista de usuarios
-      <ion-icon name="people-circle-outline"></ion-icon>
+  <ion-toolbar color="primary">
+    <ion-title>Lista de usuarios
+      <ion-icon name="person"></ion-icon>
     </ion-title>    
   </ion-toolbar>
 </ion-header>
