Entrega 2. Funciona en móvil.

--- a/src/app/juegos/juegos.page.html
+++ b/src/app/juegos/juegos.page.html
@@ -49,4 +49,6 @@
     </ion-infinite-scroll-content>
   </ion-infinite-scroll>
 </ion-content>
-<!-- <app-footer></app-footer> -->
+<app-footer>
+  
+</app-footer>
