--- a/src/app/plataformas/plataformas.page.html
+++ b/src/app/plataformas/plataformas.page.html
@@ -96,5 +96,9 @@
           <ion-icon name="cube"></ion-icon>
           <ion-label>Plataformas</ion-label>
           </ion-tab-button>
+          <ion-tab-button tab="favoritos" routerLink="/favoritos">
+            <ion-icon name="star"></ion-icon>
+            <ion-label>Favoritos</ion-label>
+          </ion-tab-button>
         </ion-tab-bar>
       </ion-tabs>
