--- a/src/app/favoritos/favoritos.page.scss
+++ b/src/app/favoritos/favoritos.page.scss
@@ -3,3 +3,23 @@ ion-slide {
  width: 100%;
  height: 100%;
 }
+
+.button2 {
+    background-color: #0a3099;
+    border: none;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    padding: 10px 24px;
+    font-size: 20px;
+    border-radius: 5px;    
+  }
+  .carro {
+	color: white;
+	font-size: 2rem;
+ }
+
+ .center{
+   text-align: center;
+ }
