--- a/src/app/pedido/pedido.page.scss
+++ b/src/app/pedido/pedido.page.scss
@@ -10,3 +10,9 @@ header .col {
     border-bottom-style: none;
     border-right-style: none;
 }
+.col:last-child {
+    border-right: solid 1px grey;
+}
+.row:last-child .col {
+    border-bottom: solid 1px grey;
+}
