--- a/src/app/userlist/userlist.page.html
+++ b/src/app/userlist/userlist.page.html
@@ -39,3 +39,16 @@
   </ion-list> 
 </ion-content>
 <!--type='a'-->
+
+<ion-tabs>
+  <ion-tab-bar slot="bottom" color="primary">
+    <ion-tab-button tab="juegos" routerLink="/userlist">
+    <ion-icon name="person"></ion-icon>
+    <ion-label>Lista de usuarios</ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab="juegos" routerLink="/grafica">
+    <ion-icon name="podium"></ion-icon>
+    <ion-label>Gráficas</ion-label>
+    </ion-tab-button>
+  </ion-tab-bar>
+</ion-tabs>
